import "in/dragonbra/javasteam/protobufs/steamclient/steammessages_base.proto";

option java_package = "in.dragonbra.javasteam.protobufs.steamclient";

option optimize_for = SPEED;
option java_generic_services = false;

message CMsgClientUFSGetUGCDetails {
  optional fixed64 hcontent = 1 [default = 18446744073709551615];
}

message CMsgClientUFSGetUGCDetailsResponse {
  optional int32 eresult = 1 [default = 2];
  optional string url = 2;
  optional uint32 app_id = 3;
  optional string filename = 4;
  optional fixed64 steamid_creator = 5;
  optional uint32 file_size = 6;
  optional uint32 compressed_file_size = 7;
  optional string rangecheck_host = 8;
  optional string file_encoded_sha1 = 9;
}

message CMsgClientUFSGetSingleFileInfo {
  optional uint32 app_id = 1;
  optional string file_name = 2;
}

message CMsgClientUFSGetSingleFileInfoResponse {
  optional int32 eresult = 1 [default = 2];
  optional uint32 app_id = 2;
  optional string file_name = 3;
  optional bytes sha_file = 4;
  optional uint64 time_stamp = 5;
  optional uint32 raw_file_size = 6;
  optional bool is_explicit_delete = 7;
}

message CMsgClientUFSShareFile {
  optional uint32 app_id = 1;
  optional string file_name = 2;
}

message CMsgClientUFSShareFileResponse {
  optional int32 eresult = 1 [default = 2];
  optional fixed64 hcontent = 2 [default = 18446744073709551615];
}
